--- a/AI_Image_Generator.ipynb
+++ b/AI_Image_Generator.ipynb
@@ -5877,7 +5877,7 @@
         "pipe.scheduler = DPMSolverMultistepScheduler.from_config(pipe.scheduler.config)\n",
         "pipe = pipe.to(\"cuda\")\n",
         "\n",
-        "prompt = \"Mountains with greenary\"\n",
+        "prompt = \"beach sunset view\"\n",
         "image = pipe(prompt, width=1000, height=1000).images[0]\n",
         "plt.imshow(image)\n",
         "plt.axis('off')\n",
@@ -6080,7 +6080,7 @@
         "id": "OX_P872cQ9b8",
         "outputId": "0e97e4b4-fe92-4798-b0b2-325d55e960f0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
